<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat1">
        <menu>
            <item
                android:id="@+id/my_ads"
                android:title="@string/my_ads"/>
            <item
                android:id="@+id/ad_cars"
                android:title="@string/ad_cars"/>
            <item
                android:id="@+id/ad_pc"
                android:title="@string/ad_pc"/>
            <item
                android:id="@+id/ad_smartphone"
                android:title="@string/ad_smartphone"/>
            <item
                android:id="@+id/ad_dm"
                android:title="@string/ad_dm"/>
        </menu>
    </item>

    <item android:title="@string/ad_cat2">
        <menu>
            <item
                android:id="@+id/ac_sign_up"
                android:title="@string/ac_sign_up"/>
            <item
                android:id="@+id/ac_sign_in"
                android:title="@string/ac_sign_in"/>
            <item
                android:id="@+id/ac_sign_out"
                android:title="@string/ac_sign_out"/>
        </menu>
    </item>

</menu>